Fixed error where default background image would appear too large in admin

--- a/admin/css/components/_images.scss
+++ b/admin/css/components/_images.scss
@@ -1,4 +1,7 @@
+$mm-preview-image--max-width: 300px;
 img.mm-preview-image {
+  max-width: $mm-preview-image--max-width;
+
   &[src=""] {
     display: none;
   }
